Address Masami's comments

--- a/docs/MPM_errors_manuscript/Bibliography.bib
+++ b/docs/MPM_errors_manuscript/Bibliography.bib
@@ -210,7 +210,7 @@ title = {{The study of population growth in organisms grouped by stages}},
 journal = {Biometrics}, 
 volume = {21}, 
 issue = {1}, 
-pages = {1}, 
+pages = {1-18}, 
 year = {1965}, 
 abstract = {}, 
 doi = {10.2307/2528348}, 
@@ -224,11 +224,24 @@ title = {{On the use of matrices in certain population mathematics}},
 journal = {Biometrika}, 
 volume = {33}, 
 issue = {3}, 
-pages = {183}, 
+pages = {183-212}, 
 year = {1945}, 
 abstract = {}, 
 doi = {10.2307/2332297}, 
 location = {}, 
 keywords = {}}
 
+
+@Book{Ebert1998,
+author = {Ebert, T. A. }, 
+title = {Plant and Animal Populations: Methods in Demography}, 
+volume = {}, 
+pages = {}, 
+editor = {}, 
+edition = {}, 
+publisher = {Academic Press}, 
+address = {San Diego, CA}, 
+year = {1998}, 
+abstract = {Book Description: This text/reference addresses the ever-increasing challenges of documenting population demographic changes, and will serve as a bridge from introductory ecology to both applied and theoretical demography. It emphasizes the analysis of population data taken from a wide variety of organisms, including terrestrial and aquatic plants and animals found in habitats from equatorial rain forests to the arctic tundra. The book also contains computer programs that are written in BASIC and include tools for population projection, matrix analysis using both sensitivity and elasticity, individual growth and survival models, and the analysis of size-frequency distributions. Key Features * Includes BASIC programs for analysis of capture-recapture data, matrices, growth models, size-frequency distribution, survival models, and many others * Contains worked examples from a wide range of animals and plants * Emphasizes actual data}, 
+keywords = {}}
 
